// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identity selectors address 1`] = `"zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly"`;

exports[`identity selectors data 1`] = `
Object {
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly",
  "addresses": Array [],
  "balance": "33.583004",
  "donationAddress": "test",
  "donationAllow": "false",
  "id": null,
  "lockedBalance": "12.583004",
  "name": "Saturn",
  "onionAddress": "",
  "shieldingTax": true,
  "shippingData": Object {
    "city": "Krakow",
    "country": "Poland",
    "firstName": "Saturn",
    "lastName": "the Planet",
    "postalCode": "1337-455",
    "region": "Malopolska",
    "street": "Coders Dv",
  },
  "signerPrivKey": Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "signerPubKey": Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "transparentAddress": "t14oHp2v54vfmdgQ3v3SNuQga8JKHTNi2a1",
  "transparentBalance": "12.123456",
}
`;

exports[`identity selectors identity 1`] = `
Object {
  "data": Object {
    "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly",
    "addresses": Array [],
    "balance": "33.583004",
    "donationAddress": "test",
    "donationAllow": "false",
    "id": null,
    "lockedBalance": "12.583004",
    "name": "Saturn",
    "onionAddress": "",
    "shieldingTax": true,
    "shippingData": Object {
      "city": "Krakow",
      "country": "Poland",
      "firstName": "Saturn",
      "lastName": "the Planet",
      "postalCode": "1337-455",
      "region": "Malopolska",
      "street": "Coders Dv",
    },
    "signerPrivKey": Object {
      "data": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "signerPubKey": Object {
      "data": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "transparentAddress": "t14oHp2v54vfmdgQ3v3SNuQga8JKHTNi2a1",
    "transparentBalance": "12.123456",
  },
  "errors": "",
  "loader": Object {
    "loading": true,
    "message": "Test loading message",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`identity selectors loader 1`] = `
Object {
  "loading": true,
  "message": "Test loading message",
}
`;

exports[`identity selectors signerPrivKey 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`identity selectors signerPubKey 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
